make bg color black even though the background is an image that itself is on a black backdrop, explicitly making the background black makes the text readable as the website loads, should reduce some jarring scroll effects on touchscreen devices, and also prevents automated accessibility checkers from false flagging for text contrast.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     color: white;
     font-family: ssk;
     font-size: 22px;
+    background-color: black;
 }
 
 body::before {
